# parallel-cpp

./: CMakeLists.txt  input.json  main.cpp  optimizator.cpp  optimizator.h  output.json  run.cpp  struct.h  vector.cpp  vector.h
